Update files for extract zimbabwe

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-TARGET=taiwan.osm.pbf
-GEOFABRIK_DOWNLOAD_URL=https://download.geofabrik.de/asia/taiwan-latest.osm.pbf
-POLY_FILE=resources/taiwan.poly
+TARGET=zimbabwe.osm.pbf
+GEOFABRIK_DOWNLOAD_URL=https://download.geofabrik.de/africa/zimbabwe-latest.osm.pbf
+POLY_FILE=resources/zimbabwe.poly
 TILEMAKER_CONFIG=resources/config-openmaptiles.json
 TILEMAKER_PROCESS=resources/process-openmaptiles.lua
